--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "description": "A starter for a blog powered by Gatsby and Markdown",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
+  "author": "Tomas vasquez <tomasdetloging@gmail.com>",
   "dependencies": {
+    "axios": "^0.19.2",
+    "dotenv": "^6.2.0",
+    "formik": "^2.1.4",
     "gatsby": "^2.24.61",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-feed": "^2.5.12",
@@ -25,36 +25,24 @@
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-remark": "^2.8.35",
     "gatsby-transformer-sharp": "^2.5.15",
+    "node-sass": "4.13.1",
     "prismjs": "^1.21.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
+    "react-google-recaptcha": "^1.0.5",
+    "react-helmet": "^5.2.0",
+    "styled-components": "^4.1.3",
     "react-typography": "^0.16.19",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typography": "^0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
-  "devDependencies": {
-    "prettier": "2.1.1"
-  },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "0BSD",
-  "main": "n/a",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
-  },
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "compile-sass": "node-sass src/assets/scss/styles.scss src/assets/css/styles.min.css --output-style compressed"
   }
 }
