add proyect cards

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.1.0",
   "author": "Tomas vasquez <tomasdetloging@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.31",
+    "@fortawesome/free-solid-svg-icons": "^5.15.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "axios": "^0.19.2",
     "dotenv": "^6.2.0",
     "formik": "^2.1.4",
@@ -15,6 +18,7 @@
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-react-helmet": "^3.3.11",
+    "gatsby-plugin-remote-images": "^2.2.0",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-typography": "^2.5.11",
     "gatsby-remark-copy-linked-files": "^2.3.15",
@@ -23,6 +27,7 @@
     "gatsby-remark-responsive-iframe": "^2.4.14",
     "gatsby-remark-smartypants": "^2.3.11",
     "gatsby-source-filesystem": "^2.3.30",
+    "gatsby-source-github-api": "^0.2.1",
     "gatsby-transformer-remark": "^2.8.35",
     "gatsby-transformer-sharp": "^2.5.15",
     "node-sass": "4.13.1",
@@ -31,9 +36,10 @@
     "react-dom": "^16.12.0",
     "react-google-recaptcha": "^1.0.5",
     "react-helmet": "^5.2.0",
-    "styled-components": "^4.1.3",
+    "react-markdown": "^4.3.1",
     "react-particles-js": "^3.3.0",
     "react-typography": "^0.16.19",
+    "styled-components": "^4.1.3",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typography": "^0.16.19",
