--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node-sass": "4.13.1",
     "prismjs": "^1.21.0",
     "react": "^16.12.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.12.0",
     "react-google-recaptcha": "^1.0.5",
     "react-helmet": "^5.2.0",
