--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.3.1",
     "react-particles-js": "^3.3.0",
+    "react-typist": "^2.0.5",
     "react-typography": "^0.16.19",
+    "reactstrap": "^8.6.0",
     "styled-components": "^4.1.3",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
