--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-source-github-api": "^0.2.1",
     "gatsby-transformer-remark": "^2.8.35",
     "gatsby-transformer-sharp": "^2.5.15",
+    "nadia-chat-widget-react": "^1.1.4",
     "node-sass": "4.13.1",
     "prismjs": "^1.21.0",
     "react": "^16.12.0",
@@ -40,6 +41,7 @@
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.3.1",
     "react-particles-js": "^3.3.0",
+    "react-tooltip": "^4.2.10",
     "react-typist": "^2.0.5",
     "react-typography": "^0.16.19",
     "reactstrap": "^8.6.0",
