--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.12.0",
+    "react-floating-action-button": "^1.0.5",
     "react-google-recaptcha": "^1.0.5",
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.3.1",
