--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "axios": "^0.19.2",
     "dotenv": "^6.2.0",
-    "formik": "^2.1.4",
     "gatsby": "^2.24.61",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-feed": "^2.5.12",
@@ -31,17 +30,16 @@
     "gatsby-source-github-api": "^0.2.1",
     "gatsby-transformer-remark": "^2.8.35",
     "gatsby-transformer-sharp": "^2.5.15",
-    "nadia-chat-widget-react": "^1.1.4",
     "node-sass": "4.13.1",
     "prismjs": "^1.21.0",
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.12.0",
     "react-floating-action-button": "^1.0.5",
-    "react-google-recaptcha": "^1.0.5",
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.3.1",
-    "react-particles-js": "^3.3.0",
+    "react-particles-js": "3.3.0",
+    "tsparticles": "^1.17.1",
     "react-tooltip": "^4.2.10",
     "react-typist": "^2.0.5",
     "react-typography": "^0.16.19",
