--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.3.1",
     "react-particles-js": "3.3.0",
-    "tsparticles": "^1.17.1",
+    "tsparticles": "1.17.1",
     "react-tooltip": "^4.2.10",
     "react-typist": "^2.0.5",
     "react-typography": "^0.16.19",
