--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "react-floating-action-button": "^1.0.5",
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.3.1",
-    "react-particles-js": "3.3.0",
-    "tsparticles": "1.17.1",
+    "react-particles-js": "^3.4.0",
     "react-tooltip": "^4.2.10",
     "react-typist": "^2.0.5",
     "react-typography": "^0.16.19",
